--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "dependencies": {
     "ohauth": "0.1.2",
     "store": "~1.3.6"
+  },
+  "devDependencies": {
+    "browserify": "~2.12.0",
+    "uglify-js": "~2.2.5"
   }
 }
