--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osm-auth",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "a usable example of javascript oauth with openstreetmap",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,8 @@
   "license": "BSD",
   "dependencies": {
     "ohauth": "0.2.1",
-    "store": "~1.3.8"
+    "store": "~1.3.8",
+    "xtend": "~2.0.4"
   },
   "devDependencies": {
     "browserify": "~2.12.0",
