--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ohauth"
   ],
   "author": "Tom MacWright <tom@macwright.org>",
-  "license": "BSD",
+  "license": "Public Domain",
   "dependencies": {
     "ohauth": "0.2.1",
     "store": "~1.3.8",
