--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "devDependencies": {
     "browserify": "^13.0.0",
     "eslint": "^3.0.0",
+    "node-localstorage": "^1.3.0",
+    "tap": "^7.0.0",
     "uglify-js": "~2.7.0"
   },
   "scripts": {
+    "build": "make",
     "lint": "eslint index.js test/osmauth.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run build && npm run lint && tap --cov test/*.js"
   }
 }
