--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osm-auth",
-  "version": "0.2.9",
+  "version": "1.0.0",
   "description": "A usable example of javascript oauth with openstreetmap",
   "main": "index.js",
   "repository": "osmlab/osm-auth",
@@ -17,11 +17,11 @@
     "xtend": "~4.0.0"
   },
   "devDependencies": {
-    "browserify": "^13.0.0",
-    "eslint": "^3.0.0",
+    "browserify": "^13.1.0",
+    "eslint": "^3.8.0",
     "node-localstorage": "^1.3.0",
-    "tap": "^7.0.0",
-    "uglify-js": "~2.7.0"
+    "tap": "^7.1.0",
+    "uglify-js": "^2.7.0"
   },
   "scripts": {
     "clean": "rm -f osmauth.js osmauth.min.js",
