--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ohauth": "~1.0.0",
     "store": "~1.3.0",
+    "resolve-url": "~0.2.1",
     "xtend": "~4.0.0"
   },
   "devDependencies": {
