--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
   },
   "devDependencies": {
     "browserify": "^13.1.0",
+    "ecstatic": "~2.1.0",
     "eslint": "^3.8.0",
     "node-localstorage": "^1.3.0",
+    "shx": "~0.1.4",
     "tap": "^8.0.0",
     "uglify-js": "^2.7.0"
   },
   "scripts": {
-    "clean": "rm -f osmauth.js osmauth.min.js",
+    "clean": "shx rm -f osmauth.js osmauth.min.js",
     "prebuild": "npm run clean",
     "build": "browserify index.js -s osmAuth > osmauth.js",
     "postbuild": "uglifyjs osmauth.js -c > osmauth.min.js",
     "lint": "eslint index.js test/osmauth.js",
+    "start": "node server.js",
     "test": "npm run build && npm run lint && tap --cov test/*.js"
   }
 }
