--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "xtend": "~4.0.0"
   },
   "devDependencies": {
-    "browserify": "^16.0.0",
+    "browserify": "^16.5.0",
     "ecstatic": "^3.2.0",
-    "eslint": "^4.1.0",
+    "eslint": "^6.5.0",
     "node-localstorage": "^1.3.0",
-    "shx": "~0.2.0",
-    "tap": "^11.0.0",
-    "uglify-js": "^3.0.0"
+    "shx": "~0.3.2",
+    "tap": "^14.6.0",
+    "uglify-js": "^3.6.0"
   },
   "scripts": {
     "clean": "shx rm -f osmauth.js osmauth.min.js",
@@ -34,5 +34,8 @@
     "lint": "eslint index.js test/osmauth.js",
     "start": "node server.js",
     "test": "npm run build && npm run lint && tap --cov test/*.js"
+  },
+  "engines": {
+    "node": ">=8.10.0"
   }
 }
