--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "osm-auth",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "A usable example of JavaScript OAuth with OpenStreetMap",
   "main": "index.js",
   "repository": "osmlab/osm-auth",
-  "author": "Tom MacWright <tom@macwright.org>",
+  "contributors": [
+    "Bryan Housel <bhousel@gmail.com> (https://github.com/bhousel)",
+    "Tom MacWright <tom@macwright.org> (https://github.com/tmcw)"
+  ],
   "license": "ISC",
   "keywords": [
     "oauth",
