--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
   "name": "osm-auth",
   "version": "1.1.0",
-  "description": "A usable example of JavaScript OAuth with OpenStreetMap",
-  "main": "index.js",
-  "repository": "osmlab/osm-auth",
-  "contributors": [
-    "Bryan Housel <bhousel@gmail.com> (https://github.com/bhousel)",
-    "Tom MacWright <tom@macwright.org> (https://github.com/tmcw)"
-  ],
   "license": "ISC",
+  "repository": "github:osmlab/osm-auth",
+  "description": "A usable example of JavaScript OAuth with OpenStreetMap",
   "keywords": [
     "oauth",
     "openstreetmap",
     "ohauth"
   ],
+  "contributors": [
+    "Bryan Housel <bhousel@gmail.com> (https://github.com/bhousel)",
+    "Tom MacWright <tom@macwright.org> (https://github.com/tmcw)"
+  ],
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "ohauth": "~1.0.0",
-    "store": "~2.0.4",
+    "store": "~2.0.12",
     "resolve-url": "~0.2.1",
-    "xtend": "~4.0.0"
+    "xtend": "~4.0.2"
   },
   "devDependencies": {
-    "browserify": "^16.5.0",
-    "ecstatic": "^3.2.0",
-    "eslint": "^6.5.0",
-    "node-localstorage": "^1.3.0",
-    "shx": "~0.3.2",
-    "tap": "^14.6.0",
-    "uglify-js": "^3.6.0"
+    "browserify": "^17.0.0",
+    "ecstatic": "4.1.4",
+    "eslint": "^7.16.0",
+    "node-localstorage": "^2.1.6",
+    "shx": "~0.3.3",
+    "tap": "^14.11.0",
+    "uglify-js": "^3.12.2"
   },
   "scripts": {
+    "all": "npm run test",
     "clean": "shx rm -f osmauth.js osmauth.min.js",
     "prebuild": "npm run clean",
     "build": "browserify index.js -s osmAuth > osmauth.js",
@@ -39,6 +41,6 @@
     "test": "npm run build && npm run lint && tap --cov test/*.js"
   },
   "engines": {
-    "node": ">=8.10.0"
+    "node": ">=10"
   }
 }
