replaces endpoints to implement OAuth2.0

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "dependencies": {
-    "ohauth": "~1.0.1",
+    "ohauth": "file:../ohauth",
     "resolve-url": "~0.2.1",
     "store": "~2.0.12"
   },
