--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "browserify": "^17.0.0",
-    "ecstatic": "4.1.4",
+    "http-server": "^14.1.0",
     "eslint": "^8.13.0",
     "node-localstorage": "^2.1.6",
     "shx": "~0.3.3",
@@ -36,7 +36,7 @@
     "build": "browserify index.js -s osmAuth > osmauth.js",
     "postbuild": "uglifyjs osmauth.js -c > osmauth.min.js",
     "lint": "eslint index.js test/*.js",
-    "start": "node server.js",
+    "start": "npx http-server",
     "test": "npm run build && npm run lint && tap --reporter terse --no-coverage test/*.js"
   },
   "engines": {
