--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "all": "run-s clean test",
     "build": "run-p build:**",
-    "build:browser": "esbuild ./src/osm-auth.mjs --platform=browser --format=iife --global-name=osmAuth --bundle --minify --external:diacritics --external:aes-js --sourcemap --outfile=./dist/osm-auth.iife.js",
+    "build:browser": "esbuild ./src/osm-auth.mjs --platform=browser --target=es5 --format=iife --global-name=osmAuth --bundle --minify --sourcemap --outfile=./dist/osm-auth.iife.js",
     "build:cjs": "esbuild ./src/osm-auth.mjs --platform=node --format=cjs --sourcemap --outfile=./dist/osm-auth.cjs",
     "clean": "shx rm -rf dist",
     "lint": "eslint src/osm-auth.mjs test/*.js",
@@ -35,7 +35,6 @@
     "test": "run-s build lint tap"
   },
   "dependencies": {
-    "@id-sdk/util": "~3.0.0-pre.10",
     "store": "~2.0.12"
   },
   "devDependencies": {
