--- a/.editorconfig
+++ b/.editorconfig
@@ -4,10 +4,7 @@ root = true
 trim_trailing_whitespace = true
 insert_final_newline = false
 
-# for ESLint
-[*.js]
+[*.{js,ts,mjs,cjs,json}]
 end_of_line = lf
-
-[*.{js,json}]
 indent_style = space
 indent_size = 2
