--- a/package.json
+++ b/package.json
@@ -36,15 +36,16 @@
     "test:node": "c8 node --test test/"
   },
   "devDependencies": {
-    "c8": "^9.0.0",
-    "esbuild": "^0.19.11",
-    "eslint": "^8.56.0",
+    "c8": "^9.1.0",
+    "esbuild": "^0.20.2",
+    "eslint": "^9.1.1",
+    "globals": "^15.0.0",
     "http-server": "^14.1.1",
     "node-localstorage": "^3.0.5",
     "npm-run-all": "^4.1.5",
     "shx": "^0.3.4"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=18.18"
   }
 }
