--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-.DS_Store
-.cache
-npm-debug.log
-package-lock.json
+/coverage
+/dist
+/node_modules
+/scratch
 
-.nyc_output/
-.scratch/
-coverage/
-node_modules/
+.DS_Store
+.vscode
+npm-debug.log
+lerna-debug.log
+package-lock.json
+yarn.lock
