--- a/package.json
+++ b/package.json
@@ -15,37 +15,35 @@
     "Hel Nershing Thapa (https://github.com/HelNershingThapa)",
     "Tom MacWright <tom@macwright.org> (https://github.com/tmcw)"
   ],
+  "files": [
+    "dist/",
+    "src/"
+  ],
   "type": "module",
-  "source": "./src/osm-auth.mjs",
-  "types": "./src/osm-auth.d.ts",
-  "main": "./dist/osm-auth.cjs",
-  "module": "./src/osm-auth.mjs",
   "exports": {
-    "import": "./src/osm-auth.mjs",
-    "require": "./dist/osm-auth.cjs"
+    "types": "./src/osm-auth.d.ts",
+    "import": "./dist/osm-auth.mjs",
+    "require": "./dist/osm-auth.cjs",
+    "browser": "./dist/osm-auth.iife.js"
   },
   "scripts": {
-    "all": "run-s clean test",
-    "build": "run-p build:**",
-    "build:browser": "esbuild ./src/osm-auth.mjs --platform=browser --target=es5 --format=iife --global-name=osmAuth --bundle --minify --sourcemap --outfile=./dist/osm-auth.iife.js",
-    "build:cjs": "esbuild ./src/osm-auth.mjs --platform=node --format=cjs --sourcemap --outfile=./dist/osm-auth.cjs",
-    "clean": "shx rm -rf dist",
-    "lint": "eslint src/osm-auth.mjs test/*.js",
-    "start": "npx http-server ./ -c-1",
-    "test": "run-s build test:node",
-    "test:node": "c8 node --test test/*.js"
+    "all": "run-s clean lint build test",
+    "build": "bun ./scripts/build.ts",
+    "clean": "rm -rf ./dist ./scratch",
+    "lint": "eslint ./src/osm-auth.mjs ./test/*.js",
+    "test": "bun test --dots --coverage ./test/*.js",
+    "start": "bun ./scripts/server.ts"
   },
   "devDependencies": {
-    "c8": "^10.1.3",
-    "esbuild": "^0.25.6",
-    "eslint": "^9.30.1",
-    "globals": "^16.3.0",
-    "http-server": "^14.1.1",
+    "@types/bun": "^1.3.0",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
     "node-localstorage": "^3.0.5",
-    "npm-run-all": "^4.1.5",
-    "shx": "^0.4.0"
+    "npm-run-all2": "^8.0.4",
+    "typescript": "^5.9.3"
   },
   "engines": {
+    "bun": ">=1.3.0",
     "node": ">=18.18"
   }
 }
