Switch to using a cleanup script that can find more stuff.
This gets rid of all those anoying .DS_Store files too.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "all": "run-s clean lint build test",
     "build": "bun ./scripts/build.ts",
-    "clean": "rm -rf ./dist ./scratch",
+    "clean": "bun ./scripts/clean.ts",
     "lint": "eslint ./src/osm-auth.mjs ./test/*.js",
     "start": "bun ./scripts/server.ts",
     "test": "bun test --dots --coverage ./test/*.js"
