--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "test": "bun test --dots --coverage ./test/*.js"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@types/bun": "^1.3.0",
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
