--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   ],
   "type": "module",
   "exports": {
+    "bun": "./src/osm-auth.mjs",
     "types": "./src/osm-auth.d.ts",
     "import": "./dist/osm-auth.mjs",
     "require": "./dist/osm-auth.cjs",
     "browser": "./dist/osm-auth.iife.js"
   },
   "scripts": {
-    "all": "run-s clean lint build test",
-    "build": "bun ./scripts/build.ts",
+    "all": "run-s clean lint build:js test",
+    "build:js": "bun ./scripts/build_js.ts",
     "clean": "bun ./scripts/clean.ts",
     "lint": "eslint ./src/osm-auth.mjs ./test/*.js",
     "start": "bun ./scripts/server.ts",
@@ -36,7 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
-    "@types/bun": "^1.3.0",
+    "@types/bun": "^1.3.1",
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
     "node-localstorage": "^3.0.5",
@@ -44,7 +45,6 @@
     "typescript": "^5.9.3"
   },
   "engines": {
-    "bun": ">=1.3.0",
-    "node": ">=18.18"
+    "bun": ">=1.3.0"
   }
 }
