--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "osm-auth",
   "version": "3.1.1",
   "license": "ISC",
-  "repository": "github:osmlab/osm-auth",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/osmlab/osm-auth.git"
+  },
   "description": "A usable example of JavaScript OAuth 2.0 with OpenStreetMap",
   "keywords": [
     "oauth",
@@ -36,10 +39,10 @@
     "test": "bun test --dots --coverage ./test/*.js"
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@types/bun": "^1.3.1",
-    "eslint": "^9.38.0",
-    "globals": "^16.4.0",
+    "@eslint/js": "^9.39.1",
+    "@types/bun": "^1.3.4",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
     "node-localstorage": "^3.0.5",
     "npm-run-all2": "^8.0.4",
     "typescript": "^5.9.3"
